--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "request": "^2.81.0",
     "object-assign": "^4.1.1",
     "request-promise":"^4.2.1",
-    "querystring":"^0.2.0"
+    "querystring":"^0.2.0",
+    "randomstring":"^1.1.5"
   }
 }
