--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "object-assign": "^4.1.1",
     "request-promise":"^4.2.1",
     "querystring":"^0.2.0",
-    "randomstring":"^1.1.5"
+    "randomstring":"^1.1.5",
+    "koa-validate":"^1.0.7",
+    "koa-body":"^2.3.0"
   }
 }
